# deeptracy

./: .env.required  .gitignore  .travis.yml  CONTRIBUTING.md  Dockerfile  Dockerfile.buildbot  Dockerfile.hasuracli  Dockerfile.server  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  create_patton_db.py  deeptracy.env  deeptracy.py  demo.py  docker-compose.yaml  docker-compose.yml  init_patton_db.sh  requirements.txt  requirements_dev.txt  requirements_test.txt  retirejs_task.txt  run.sh  run_api.sh  setup.cfg  setup.py  tox.ini  upload_plugins_images.sh
buildbot/: Pipfile  master.cfg
compose/: .env  deeptracy-config.env  docker-compose-database.yml  docker-compose.yaml
compose/hasura/: config.yaml
deeptracy/: Pipfile  __init__.py  __main__.py  app.py  celery.py  cli.py  config.py  deeptracy.view  flask.py  model.py  plugin_store.py  providers.py  redis.py  tasks.py  utils.py  web.py
deeptracy/api/: celery.py  flask.py  project_blueprint.py
deeptracy/buildbot/: buildbot.tac  master.cfg
deeptracy/dal/: database.py  models.py  plugin_manager.py  project_manager.py  scan_analysis_manager.py  (+1 more)
deploy/: README.rst  docker-compose.yml  init.sh  instance.tf  main.tf
docs/: Makefile  api.rst  conf.py  deeptracy.dal.rst  deeptracy.notifications.rst  deeptracy.plugins.rst  deeptracy.rst  deeptracy.tasks.rst  developer.rst  index.rst  installation.rst  installation_dev.rst  modules.rst  quickstart.rst  requirements.txt  spelling_word_list.txt  testing_dev.rst  usage.rst  usage_dev.rst  user.rst
release/: image_dockerhub.sh  plugins_images_dockerhub.sh
(+132 files in other folders)
