[bdist_wheel]
universal=1

[metadata]
description-file =
    README.md

[bumpversion]
current_version = 0.0.1
commit = True
tag = False

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:deeptracy/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:docs/conf.py]
search = = {current_version}
replace = = {new_version}

[flake8]
ignore = E999 # static typing errors
exclude = build,.git,.tox
max-line-length = 119
