[bumpversion]
current_version = 0.0.3
commit = True
tag = False

[bdist_wheel]
universal = 1

[metadata]
description-file = 
	README.rst

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:deeptracy/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:docs/conf.py]
search = = {current_version}
replace = = {new_version}

[flake8]
ignore = E999 # static typing errors
exclude = build,.git,.tox
max-line-length = 119

