[bumpversion]
current_version = 0.0.3
commit = True
tag = False

[bdist_wheel]
universal = 1

[metadata]
description-file = 
	README.rst

[bumpversion:file:setup.py]

[bumpversion:file:deeptracy/__init__.py]

[bumpversion:file:docs/conf.py]

[bumpversion:file:VERSION]

[flake8]
ignore = E999 # static typing errors
exclude = build,.git,.tox
max-line-length = 119

